Aesthetic fix (no scrollbar maximized in 1080p)

--- a/src/app/worldmap/worldmap.component.scss
+++ b/src/app/worldmap/worldmap.component.scss
@@ -1,5 +1,5 @@
 #worldmap{
-  width:90%;
+  width:85%;
 }
 
 :host{
